[package]
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2018"
name = "currentcost-influx"
version = "1.0.0"
[dependencies]
chrono = "0.4.10"
futures = "0.3.1"
openssl = "*"
regex = "1.3.1"
structopt = "0.3.5"

[dependencies.influxdb]
git = "https://github.com/Strum355/influxdb-rust.git"

[dependencies.quick-xml]
features = ["serialize"]
version = "0.17.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.104"

[dependencies.serialport]
default-features = false
version = "3.3.0"

[dependencies.tokio]
features = ["macros"]
version = "0.2.6"
